plugins/portlets/sharedcollabfacelets-portlet/docroot/css/simulation/simulation-outputs.css
.impactsContent {
	overflow: hidden;
	height: 200px;
}


.impactsContent h3.ui-accordion-header a.activator {
    margin: 0;
    padding: 0;
    padding-top: 6px;
    padding-bottom: 3px;
    padding-left: 15px;
    font-weight:normal;
}

.impactsContent h3.ui-accordion-header {
    cursor: pointer;
}


/* vertical tabs */
.ui-tabs {
    border-bottom: 0;
    padding: 0 0 0 0;
}

.ui-tabs-vertical {
    width: 400px;
}
.ui-tabs-vertical .ui-tabs-nav {
    float: left;
    width: 120px;
}
.ui-tabs-vertical .ui-tabs-nav li {
    clear: left;
    width: 100%;
}

.ui-tabs-vertical .ui-tabs-nav li a {
    display:block;
    width: 120px;
    height: auto;
    padding-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
}

.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-selected {
    padding-bottom: 0;
    padding-right: .1em;
    border-right-width: 1px;
    border-right-width: 1px;
}

.ui-tabs-vertical .ui-tabs-panel {
    padding: 1em;
    float: left;
    width: 200px;
    border: none;
}

.ui-tabs-panel .ui-widget-content h4 {
     margin-top:10px;
}

.physicalImpactsTab .tabsContainer,
.physicalImpactsTab .contentsContainer {
    float: left;
}


.physicalImpactsTab .contentsContainer {
    width: 312px;
    padding: 5px;
    background: #fff;
}

.physicalImpactsTab .contentsContainer .tabContent {
    background: #fff;
}


.physicalImpactsTab .tabsContainer {
    width: 120px;
}

.physicalImpactsTab .tabsContainer a {
    cursor: pointer;
    color: #FFFFFF;
}


.physicalImpactsTab .tabsContainer a:hover {
    color: #ddd;
}

.physicalImpactsTab .tabsContainer li {
    background-image:url("/collaboratorium-theme/images/blue_table_bg_header.png");
    background-position:left center;
    background-repeat: no-repeat;
    color:#FFFFFF;
    cursor:pointer;
    font-size:13px;
    font-weight:bold;
    height:33px;
    list-style-image:none;
    list-style-position:outside;
    list-style-type:none;
    margin-top: 6px;
    padding-top:5px;
    text-align:center;
    width:120px;
}

.physicalImpactsTab .tabsContainer li.active {
    background-attachment:scroll;
    background-color:transparent;
    background-image:url("/collaboratorium-theme/images/blue_table_th_bg.gif");
    background-position:left center;
    background-repeat:no-repeat;
}

    
.run-the-model-to-see-inputs  {
    
    color:#999999;
    font-weight:bold;
    padding-bottom:100px;
    padding-top:100px;
    text-align:center;
    width:100%;
}

ul.ui-tabs-nav li.ui-state-active a{
    background:none repeat scroll 0 0 #FFFFFF;
    border-color:#DEDEDE #DEDEDE;
    border-style:solid solid none;
    border-width:1px 1px medium;
    color:#336699;
    font-weight:bold;
}



.impactsContent .ui-accordion-header a.folder {
    padding: 0;
    color:#336699;

}

.ui-accordion .ui-accordion-header {
    
    background:none repeat-x scroll 50% 50% #EBEBEB;
}

.ui-accordion h3.ui-accordion-header:hover, .ui-accordion h3.ui-accordion-header.ui-state-active {

    background:none repeat-x scroll 50% 50% #58534A;

}

.ui-accordion h3.ui-accordion-header:hover a, .ui-accordion h3.ui-accordion-header.ui-state-active a {
    color:#FFF;
}

.ui-accordion .ui-accordion-header.ui-state-default, 
.ui-accordion .ui-accordion-header.ui-state-active {
    margin-top:1px;
    margin-bottom:0px;
    margin-right:0px;
    margin-left:0px;
    border: 0;/*1px solid #CCCCCC;*/
}

.scalarOutput {
    padding: 0;
    line-height: normal;
}

.impacts  {
   
}

.impacts .corcen_top {
    width:100%;
}

.impacts .corcen_bottom {
   
    width:100%;
}

.impacts .corcen {
     border:thin solid #E1E1E1;
    background:#FFFFFF;
    width:100%;
}

.impacts .title {
    background:none repeat scroll 0 0 #EBEBEB;
    border-bottom:1px solid #E1E1E1;
    border-top:1px solid #E1E1E1;
    height:42px;
    margin:0 auto;
    padding:0;
    width:100%;
}

.impacts .title h2 {
    float:left;
    margin-top:6px;
    margin-left:15px;
    margin-bottom:0px;
    margin-right:0px;

}

.impacts input[type="submit"].prominantButton {
    float:right;
    margin: 5px 5px 5px 0;
}

.impacts input[type="submit"].prominantButton-dis {
    float:right;
    margin: 5px 5px 5px 0;
}



.chartMessagePlaceholder {
	border: 1px solid red;
	background: #FAD2D7;
	padding: 5px;
	margin: 5px;
}

.chartMessagePlaceholder li {
    color: #571B22;
}

